test_resources/commit_952ce/test1.yr
in test1;

fn baz (_ : i32) {}
fn main () {
    let a = 90 + 'r'; // error
    baz (a); // should not try to call function with error
}
